--- a/clientui/src/main/resources/templates/Payment.html
+++ b/clientui/src/main/resources/templates/Payment.html
@@ -4,7 +4,7 @@
     <title>Mcommerce</title>
 
     <link rel="stylesheet" type="text/css"
-          href="http://localhost:8888/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css"/>
+          href="http://10.126.226.2:8888/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css"/>
 
 </head>
 <body>
@@ -35,7 +35,7 @@
 </div>
 
 
-<script type="text/javascript" src="http://localhost:8888/webjars/bootstrap/4.0.0-2/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="http://10.126.226.2:8888/webjars/bootstrap/4.0.0-2/js/bootstrap.min.js"></script>
 
 </body>
 </html>
